--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
     "spectorjs": "^0.9.22",
+    "stats.js": "^0.17.0",
     "style-loader": "^2.0.0",
     "three": "^0.126.0",
     "webpack": "^5.24.2",
