--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "repository": "#",
   "license": "UNLICENSED",
   "scripts": {
-    "pro": "webpack --config ./webpack.prod.js",
-    "dev": "webpack serve --config ./webpack.dev.js"
+    "dev": "webpack --watch --mode=development",
+    "pro": "webpack --mode=production"
   },
   "dependencies": {
     "@babel/core": "^7.13.1",
@@ -25,6 +25,7 @@
     "stats.js": "^0.17.0",
     "style-loader": "^2.0.0",
     "three": "^0.122.0",
+    "three-to-cannon": "^4.0.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
